--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,13 @@
-version: '3'
 services:
-
     pgsql:
-        image: postgres:14.7
-        volumes:
-            - ./db:/var/lib/postgresql/data
-            - ./postgres-initdb.sh:/docker-entrypoint-initdb.d/initdb.sh
+        image: postgres
+        restart: always
+        shm_size: 128mb
+        # volumes:
+        #     - type: tmpfs
+        #       target: /dev/shm
+        #       tmpfs:
+        #         size: 134217728 # 128*2^20 bytes = 128Mb
         ports:
             - "0.0.0.0:7778:5432"
         networks:
@@ -25,7 +27,7 @@ services:
 
     redis:
         image: redis:latest
-        user: redis        
+        user: redis
         networks:
             - temmulex-dev-network
         ports:
