--- a/package.json
+++ b/package.json
@@ -1,26 +1,35 @@
 {
   "name": "temmulex",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
+    "drizzle:push": "npx drizzle-kit push",
+    "drizzle:migrate": "npx drizzle-kit migrate",
+    "drizzle:generate": "npx drizzle-kit generate",
+    "drizzle:studio": "npx drizzle-kit studio",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vinejs/vine": "^4.1.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.7",
     "express": "^5.1.0",
     "ioredis": "^5.8.2",
-    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
-    "pg-promise": "^12.2.0",
-    "pm2": "^6.0.13",
+    "pm2": "^6.0.11",
     "socket.io": "^4.8.1",
     "uuid": "^13.0.0"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.31.7"
   }
 }
