--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@socket.io/redis-adapter": "^8.3.0",
     "@vinejs/vine": "^4.1.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
@@ -28,7 +29,6 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
-    "pm2": "^6.0.11",
     "socket.io": "^4.8.1",
     "uuid": "^13.0.0"
   },
