--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@socket.io/redis-adapter": "^8.3.0",
     "@vinejs/vine": "^4.1.0",
     "bcrypt": "^6.0.0",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "express": "^5.1.0",
